# InferScale

./: CHANGELOG.md  README.md  changelog.md  mkdocs.yml  pyproject.toml  release_pypi.sh
.github/workflows/: docs.yml
best_of_n/: __init__.py  best_of_n_sampler.py
dev_log/: dev_log.txt
docs/: api.md  index.md
examples/: best_of_n_sampler_example1.py
sandbox/: summac_sandbox.py  tokenizer_sandbox_1.py
src/inferscale/best_of_n/: __init__.py  best_of_n_sampler.py
