[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "inferscale"
version = "0.1.0"
description = "Inference-time model selection and ensembling for LLM outputs"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Mohamed Baddar"}]

dependencies = [
    "numpy",
    "transformers",
    "torch"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]